Update 'h5czmz2nn-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:d4326e16b8becc9157151890a384280450791c76@sha256:a6a2f765288d841c30aea0d6d6b3c813d02a4b7c76e3dbc6afb7ff27c946d1b4

--- a/components/h5czmz2nn-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/h5czmz2nn-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: h5czmz2nn-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:d4326e16b8becc9157151890a384280450791c76@sha256:a6a2f765288d841c30aea0d6d6b3c813d02a4b7c76e3dbc6afb7ff27c946d1b4
+          name: container-image
